# Mori

./: .gitignore  .gitmodules  ANDROID_INSTALL.md  CLAUDE.md  Cargo.toml  Procfile
.github/workflows/: build-android.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
android/app/src/main/res/mipmap-mdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
core/: Cargo.toml
core/src/: lib.rs  lua.rs  packet_handler.rs  server.rs  variant_handler.rs
core/src/types/: bot.rs  login_info.rs  mod.rs  net_game_packet.rs  server_config.rs
core/src/utils/: proton.rs
src/: cli.rs  main.rs
src/web/: mod.rs
static/css/: style.css
templates/: index.html
