[package]
name = "Mori"
version = "0.1.0"
edition = "2024"
authors = ["Cendy"]
default-run = "mori"

[[bin]]
name = "mori"
path = "src/main.rs"

[[bin]]
name = "mori-cli"
path = "src/cli.rs"

[dependencies]
gt-core = { path = "./core" }
serde_json = "1.0.143"

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures-util = "0.3"

askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
egui = { version = "0.33.0", optional = true }
eframe = { version = "0.33.0", optional = true }
egui_extras = { version = "0.33.0", features = ["svg"], optional = true }
egui_material_icons = { version = "0.5.0", optional = true }
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["gui"]
gui = ["dep:egui", "dep:eframe", "dep:egui_extras", "dep:egui_material_icons"]

